Add professor view

--- a/directory/templates/base.html
+++ b/directory/templates/base.html
@@ -33,6 +33,11 @@
             <span uk-icon="thumbnails"></span>&nbsp;Departments
           </a>
         </li>
+        <li class="uk-active">
+          <a href="{% url 'professor_list' %}">
+            <span uk-icon="user"></span>&nbsp;Professors
+          </a>
+        </li>
       </ul>
     </div>
     <div class="uk-navbar-right">
