--- a/directory/templates/professor/delete.html
+++ b/directory/templates/professor/delete.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1 class="uk-heading-small">Delete Department</h1>
-{% url 'department_detail' department.id as cancel_url %}
+<h1 class="uk-heading-small">Delete Professor</h1>
+{% url 'professor_detail' professor.id as cancel_url %}
 {% include 'delete_form.html' with form=form cancel_url=cancel_url %}
 {% endblock %}
