Add course view

--- a/directory/templates/base.html
+++ b/directory/templates/base.html
@@ -38,6 +38,11 @@
             <span uk-icon="user"></span>&nbsp;Professors
           </a>
         </li>
+        <li class="uk-active">
+          <a href="{% url 'course_list' %}">
+            <span uk-icon="folder"></span>&nbsp;Courses
+          </a>
+        </li>
       </ul>
     </div>
     <div class="uk-navbar-right">
