Add student view

--- a/directory/templates/base.html
+++ b/directory/templates/base.html
@@ -43,6 +43,11 @@
             <span uk-icon="folder"></span>&nbsp;Courses
           </a>
         </li>
+        <li class="uk-active">
+          <a href="{% url 'student_list' %}">
+            <span uk-icon="reddit"></span>&nbsp;Students
+          </a>
+        </li>
       </ul>
     </div>
     <div class="uk-navbar-right">
