Update grade view

--- a/directory/templates/student/detail.html
+++ b/directory/templates/student/detail.html
@@ -29,7 +29,7 @@
     </tbody>
     <tfoot>
         <tr>
-            <td><a uk-tooltip="Create Grade" href="{% url 'grade_create' %}"><span uk-icon="plus-circle"></span></a></td>
+            <td><a uk-tooltip="Create Grade" href="{% url 'grade_create' student.id %}"><span uk-icon="plus-circle"></span></a></td>
         </tr>
     </tfoot>
 </table>
