--- a/directory/templates/grade/create.html
+++ b/directory/templates/grade/create.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1 class="uk-heading-small">Create Grade</h1>
-{% url 'student_detail' grade.student.id as cancel_url %}
+<h2>Student: {{ student }}</h2>
+{% url 'student_detail' student.id as cancel_url %}
 {% include 'form.html' with form=form cancel_url=cancel_url submit_label="Create" %}
 {% endblock %}
