--- a/directory/templates/grade/update.html
+++ b/directory/templates/grade/update.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1 class="uk-heading-small">Edit Grade</h1>
+<h1 class="uk-heading-small">Update Grade</h1>
 {% url 'student_detail' grade.student.id as cancel_url %}
 {% include 'form.html' with form=form cancel_url=cancel_url %}
 {% endblock %}
