--- a/directory/templates/professor/update.html
+++ b/directory/templates/professor/update.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1 class="uk-heading-small">Edit Professor</h1>
+<h1 class="uk-heading-small">Update Professor</h1>
 {% url 'professor_detail' professor.id as cancel_url %}
 {% include 'form.html' with form=form cancel_url=cancel_url %}
 {% endblock %}
