--- a/directory/templates/student/delete.html
+++ b/directory/templates/student/delete.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1 class="uk-heading-small">Delete Professor</h1>
+<h1 class="uk-heading-small">Delete Student</h1>
 {% url 'student_detail' student.id as cancel_url %}
 {% include 'delete_form.html' with form=form cancel_url=cancel_url %}
 {% endblock %}
