--- a/directory/templates/student/detail.html
+++ b/directory/templates/student/detail.html
@@ -7,6 +7,7 @@
 </h1>
 <h2><span uk-icon="mail"></span> {{ student.email }}</h2>
 <h2><span uk-icon="history"></span> {{ student.year }}</h2>
+<h2><span uk-icon="bookmark"></span> {{ student.gpa }}</h2>
 
 <table class="uk-table uk-table-striped">
     <thead>
